--- a/second.html
+++ b/second.html
@@ -1,4 +1,4 @@
-<html>
+i<html>
     <head>
         <title>Internship-About</title>
         <link rel="icon" href="edureka.png"/>
@@ -7,7 +7,7 @@
         <header>
             <center>
                 <h1>About Page</h1>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 
             </center>
             <hr/>
