--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@ i<html>
         <header>
             <center>
                 <h1>About Page</h1>
-                <a href="index.html">Home</a>
+                <a href="index.html">First page</a>
                 
             </center>
             <hr/>
