--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </center>
         <hr>
         <h2>Contact Me</h2>
+        <h3>Email  : bharatlalprasad527@gmail.com</h3> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.4733494113866!2d88.35933026476107!3d22.59879253516928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027635b46f781b%3A0xd7b65c99073f8c96!2sShobhabazar%2C%20Kolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1651170580477!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <footer>
             <hr/>
